--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
     </parent>
     <artifactId>tlias-web-management</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
+
     <name>tlias_web_management</name>
     <description>tlias_web_management</description>
     <url/>
@@ -59,7 +61,11 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>2.0.52 </version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
         </dependency>
 
         <dependency>
